--- a/html/products.html
+++ b/html/products.html
@@ -44,7 +44,7 @@
           <li><a href="master.html" class="nav-link">Home</a></li>
           <li><a href="aboutUs.html" class="nav-link">About Us</a></li>
           <li><a href="#" class="nav-link nav-active">Products</a></li>
-          <li><a href="#" class="nav-link">Media</a></li>
+          <li><a href="../html/media.html" class="nav-link">Media</a></li>
           <li>
             <a href="manufactruingProcess.html" class="nav-link"
               >Manufacturing Process</a
@@ -196,7 +196,7 @@
               <li><a href="../html/master.html">Home</a></li>
               <li><a href="../html/aboutUs.html">About Us</a></li>
               <li><a href="#services">Products</a></li>
-              <li><a href="#">Media</a></li>
+              <li><a href="../html/media.html">Media</a></li>
               <li>
                 <a href="manufactruingProcess.html">Manufacturing Process</a>
               </li>
