--- a/html/aboutUs.html
+++ b/html/aboutUs.html
@@ -54,7 +54,7 @@
             <a href="aboutUs.html" class="nav-link nav-active">About Us</a>
           </li>
           <li><a href="products.html" class="nav-link">Products</a></li>
-          <li><a href="#" class="nav-link">Media</a></li>
+          <li><a href="../html/media.html" class="nav-link">Media</a></li>
           <li>
             <a href="manufactruingProcess.html" class="nav-link"
               >Manufacturing Process</a
@@ -234,7 +234,7 @@
               <li><a href="master.html">Home</a></li>
               <li><a href="aboutUs.html">About Us</a></li>
               <li><a href="products.html">Products</a></li>
-              <li><a href="#">Media</a></li>
+              <li><a href="../html/media.html">Media</a></li>
               <li>
                 <a href="manufactruingProcess.html">Manufacturing Process</a>
               </li>
