--- a/html/contactUs.html
+++ b/html/contactUs.html
@@ -58,7 +58,7 @@
           <li><a href="master.html" class="nav-link">Home</a></li>
           <li><a href="aboutUs.html" class="nav-link">About Us</a></li>
           <li><a href="../html/products.html" class="nav-link">Products</a></li>
-          <li><a href="#" class="nav-link">Media</a></li>
+          <li><a href="../html/media.html" class="nav-link">Media</a></li>
           <li>
             <a href="manufactruingProcess.html" class="nav-link"
               >Manufacturing Process</a
@@ -133,7 +133,7 @@
               <li><a href="master.html">Home</a></li>
               <li><a href="aboutUs.html">About Us</a></li>
               <li><a href="../html/products.html">Products</a></li>
-              <li><a href="#">Media</a></li>
+              <li><a href="../html/media.html">Media</a></li>
               <li>
                 <a href="manufactruingProcess.html">Manufacturing Process</a>
               </li>
