--- a/html/employee.html
+++ b/html/employee.html
@@ -50,7 +50,7 @@
               <a href="products.html" class="nav-link">Products</a>
             </li>
             <li>
-              <a href="#" class="nav-link">Media</a>
+              <a href="../html/media.html" class="nav-link">Media</a>
             </li>
             <li>
               <a href="manufactruingProcess.html" class="nav-link"
@@ -125,7 +125,7 @@
               <li><a href="master.html">Home</a></li>
               <li><a href="aboutUs.html">About Us</a></li>
               <li><a href="products.html">Products</a></li>
-              <li><a href="#blog">Media</a></li>
+              <li><a href="../html/media.html">Media</a></li>
               <li>
                 <a href="manufactruingProcess.html">Manufacturing Process</a>
               </li>
