--- a/html/aboutUs.html
+++ b/html/aboutUs.html
@@ -70,7 +70,7 @@
     <div class="container">
       <div class="hero-section">
         <h1>Yuktesh Brick Manufacturing</h1>
-        <p class="hero-subtitle">Building Tomorrow with Quality Today</p>
+        <p class="hero-subtitle">Building Tomorrow with Quality Today.</p>
 
         <div class="experience-stats">
           <div class="stat-card">
