--- a/html/employee.html
+++ b/html/employee.html
@@ -74,8 +74,8 @@
     <div class="content-section">
       <div class="container">
         <div class="page-header">
-          <h2>Our Team</h2>
-          <p>Meet the talented professionals at Yuktesh Enterprises</p>
+          <h1>Our Team</h1>
+          <p>Meet the talented professionals at Yuktesh Enterprises.</p>
         </div>
 
         <div class="search-container">
