--- a/html/manufactruingProcess.html
+++ b/html/manufactruingProcess.html
@@ -94,7 +94,6 @@
     </div>
 
     <!-- Process Overview -->
-
     <section id="process" class="process-section">
       <h2 class="section-title">Our Manufacturing Process</h2>
       <p
@@ -233,7 +232,9 @@
               tests ensure proper workability and uniform color distribution.
             </p>
           </div>
-          <div class="step-visual"><i class="fa-solid fa-repeat"></i></div>
+          <div class="step-visual">
+            <i class="fa-solid fa-repeat"></i>
+          </div>
         </div>
 
         <div class="process-step">
@@ -395,7 +396,7 @@
       </div>
     </section>
 
-    <!-- Contact Section -->
+    <!-- Footer Section -->
     <footer class="footer">
       <div class="footer-container">
         <div class="footer-content">
