--- a/html/contactUs.html
+++ b/html/contactUs.html
@@ -64,7 +64,7 @@
               >Manufacturing Process</a
             >
           </li>
-          <li><a href="#" class="nav-link">Order Management</a></li>
+          <li><a href="../html/orderManagement.html" class="nav-link">Order Management</a></li>
           <li><a href="./employee.html" class="nav-link">Our Team</a></li>
           <li>
             <a href="contactUs.html" class="nav-link nav-active">Contact Us</a>
@@ -137,7 +137,7 @@
               <li>
                 <a href="manufactruingProcess.html">Manufacturing Process</a>
               </li>
-              <li><a href="#blog">Order Management</a></li>
+              <li><a href="../html/orderManagement.html">Order Management</a></li>
               <li><a href="employee.html">Our Team</a></li>
               <li><a href="contactUs.html">Contact Us</a></li>
             </ul>
