--- a/html/employee.html
+++ b/html/employee.html
@@ -58,7 +58,7 @@
               >
             </li>
             <li>
-              <a href="#" class="nav-link">Order Management</a>
+              <a href="../html/orderManagement.html" class="nav-link">Order Management</a>
             </li>
             <li>
               <a href="employee.html" class="nav-link nav-active">Our Team</a>
@@ -129,7 +129,7 @@
               <li>
                 <a href="manufactruingProcess.html">Manufacturing Process</a>
               </li>
-              <li><a href="#blog">Order Management</a></li>
+              <li><a href="../html/orderManagement.html">Order Management</a></li>
               <li><a href="employee.html">Our Team</a></li>
               <li><a href="contactUs.html">Contact Us</a></li>
             </ul>
