--- a/html/aboutUs.html
+++ b/html/aboutUs.html
@@ -60,7 +60,7 @@
               >Manufacturing Process</a
             >
           </li>
-          <li><a href="#" class="nav-link">Order Management</a></li>
+          <li><a href="../html/orderManagement.html" class="nav-link">Order Management</a></li>
           <li><a href="employee.html" class="nav-link">Our Team</a></li>
           <li><a href="contactUs.html" class="nav-link">Contact Us</a></li>
         </ul>
@@ -238,7 +238,7 @@
               <li>
                 <a href="manufactruingProcess.html">Manufacturing Process</a>
               </li>
-              <li><a href="#">Order Management</a></li>
+              <li><a href="../html/orderManagement.html">Order Management</a></li>
               <li><a href="employee.html">Our Team</a></li>
               <li><a href="contactUs.html">Contact Us</a></li>
             </ul>
