--- a/html/master.html
+++ b/html/master.html
@@ -43,7 +43,7 @@
         <li><a href="../html/products.html" class="nav-link">Products</a></li>
         <li><a href="../html/media.html" class="nav-link">Media</a></li>
         <li><a href="manufactruingProcess.html" class="nav-link">Manufacturing Process</a></li>
-        <li><a href="#" class="nav-link">Order Management</a></li>
+        <li><a href="../html/orderManagement.html" class="nav-link">Order Management</a></li>
         <li><a href="employee.html" class="nav-link">Our Team</a></li>
         <li><a href="contactUs.html" class="nav-link">Contact Us</a></li>
       </ul>
@@ -236,7 +236,7 @@
                         <li><a href="../html/products.html">Products</a></li>
                         <li><a href="../html/media.html">Media</a></li>
                         <li><a href="manufactruingProcess.html">Manufacturing Process</a></li>
-                        <li><a href="#blog">Order Management</a></li>
+                        <li><a href="../html/orderManagement.html">Order Management</a></li>
                         <li><a href="employee.html">Our Team</a></li>
                         <li><a href="contactUs.html">Contact Us</a></li>
                     </ul>
