--- a/html/media.html
+++ b/html/media.html
@@ -40,7 +40,7 @@
                 <li><a href="../html/products.html" class="nav-link ">Products</a></li>
                 <li><a href="#" class="nav-link nav-active">Media</a></li>
                 <li><a href="../html/manufactruingProcess.html" class="nav-link">Manufacturing Process</a></li>
-                <li><a href="#" class="nav-link">Order Management</a></li>
+                <li><a href="../html/orderManagement.html" class="nav-link">Order Management</a></li>
                 <li><a href="../html/employee.html" class="nav-link">Our Team</a></li>
                 <li><a href="../html/contactUs.html" class="nav-link">Contact Us</a></li>
             </ul>
@@ -135,7 +135,7 @@
                         <li><a href="../html/products.html">Products</a></li>
                         <li><a href="#">Media</a></li>
                         <li><a href="../html/manufactruingProcess.html">Manufacturing Process</a></li>
-                        <li><a href="#blog">Order Management</a></li>
+                        <li><a href="../html/orderManagement.html">Order Management</a></li>
                         <li><a href="../html/employee.html">Our Team</a></li>
                         <li><a href="../html/contactUs.html">Contact Us</a></li>
                     </ul>
