--- a/html/products.html
+++ b/html/products.html
@@ -50,7 +50,7 @@
               >Manufacturing Process</a
             >
           </li>
-          <li><a href="#" class="nav-link">Order Management</a></li>
+          <li><a href="../html/orderManagement.html" class="nav-link">Order Management</a></li>
           <li><a href="employee.html" class="nav-link">Our Team</a></li>
           <li><a href="contactUs.html" class="nav-link">Contact Us</a></li>
         </ul>
@@ -200,7 +200,7 @@
               <li>
                 <a href="manufactruingProcess.html">Manufacturing Process</a>
               </li>
-              <li><a href="#blog">Order Management</a></li>
+              <li><a href="../html/orderManagement.html">Order Management</a></li>
               <li><a href="../html/employee.html">Our Team</a></li>
               <li><a href="../html/contactUs.html">Contact Us</a></li>
             </ul>
