--- a/html/media.html
+++ b/html/media.html
@@ -53,6 +53,7 @@
             <!-- Blog / Media Cards -->
             <div class="tittle ">
                 <h2 class="section-title" id="yuktha-title">Yuktha Bricks</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, facere?</p>
             </div>
             <!-- <h2 class="section-title">Yuktha Bricks</h2> -->
             <div class="card-grid">
@@ -177,7 +178,7 @@
     </footer>
 
 
-    <script src="./media.js"></script>
+    <script src="../js/media.js"></script>
 
 </body>
 
