--- a/html/products.html
+++ b/html/products.html
@@ -60,6 +60,7 @@
     <section class="products">
       <div class="section-title">
         <h1>Our Premium Products</h1>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusamus, incidunt perspiciatis. Recusandae iste beatae eius.</p>
       </div>
 
       <div class="product-grid">
