--- a/html/manufactruingProcess.html
+++ b/html/manufactruingProcess.html
@@ -102,6 +102,7 @@
           font-size: 1.1rem;
           max-width: 800px;
           margin: 0 auto;
+          padding: 0 40px;
         "
       >
         At Yuktesh Cement Bricks, we follow a precise 8-step manufacturing
