--- a/html/orderManagement.html
+++ b/html/orderManagement.html
@@ -162,56 +162,106 @@
 
           <div class="order-section">
             <h2 class="section-title">
-              <i class="fas fa-search"></i>
-              Track Your Order
+              <i class="fas fa-phone"></i>
+              Contact Information
             </h2>
-            <form class="order-form" id="trackingForm">
-              <div class="form-group">
-                <label for="orderId">Order ID</label>
-                <input
-                  type="text"
-                  id="orderId"
-                  name="orderId"
-                  placeholder="Enter your order ID"
-                />
+            <div class="contact-info">
+              <div class="contact-item">
+                <div class="contact-icon">
+                  <i class="fas fa-map-marker-alt"></i>
+                </div>
+                <div class="contact-details">
+                  <h4>Factory Address</h4>
+                  <p>
+                    Plot No. 45, Industrial Area, Sector 12<br />
+                    Hyderabad, Telangana 500032<br />
+                    India
+                  </p>
+                </div>
               </div>
-              <div class="form-group">
-                <label for="trackingEmail">Email Address</label>
-                <input
-                  type="email"
-                  id="trackingEmail"
-                  name="trackingEmail"
-                  placeholder="Enter your email"
-                />
-              </div>
-              <button type="submit" class="btn btn-secondary">
-                <i class="fas fa-truck"></i> Track Order
-              </button>
-            </form>
 
-            <div class="order-status">
-              <h3>Recent Orders</h3>
-              <div class="status-cards">
-                <div class="status-card">
-                  <h4>Order #YE-2024-001</h4>
-                  <p><strong>Product:</strong> Solid Cement Brick</p>
-                  <p><strong>Quantity:</strong> 1,000 pieces</p>
-                  <p><strong>Date:</strong> June 05, 2025</p>
-                  <span class="status-badge status-processing">Processing</span>
+              <div class="contact-item">
+                <div class="contact-icon">
+                  <i class="fas fa-phone"></i>
                 </div>
-                <div class="status-card">
-                  <h4>Order #YE-2024-002</h4>
-                  <p><strong>Product:</strong> Hollow Cement Brick</p>
-                  <p><strong>Quantity:</strong> 2,500 pieces</p>
-                  <p><strong>Date:</strong> June 03, 2025</p>
-                  <span class="status-badge status-pending">Pending</span>
+                <div class="contact-details">
+                  <h4>Phone Numbers</h4>
+                  <p>
+                    Main Office: <a href="tel:+914012345678">+91 40 1234 5678</a
+                    ><br />
+                    Sales: <a href="tel:+919876543210">+91 98765 43210</a><br />
+                    Support: <a href="tel:+919123456789">+91 91234 56789</a>
+                  </p>
                 </div>
-                <div class="status-card">
-                  <h4>Order #YE-2024-003</h4>
-                  <p><strong>Product:</strong> Paver Block</p>
-                  <p><strong>Quantity:</strong> 500 pieces</p>
-                  <p><strong>Date:</strong> May 28, 2025</p>
-                  <span class="status-badge status-completed">Completed</span>
+              </div>
+
+              <div class="contact-item">
+                <div class="contact-icon">
+                  <i class="fas fa-envelope"></i>
+                </div>
+                <div class="contact-details">
+                  <h4>Email Addresses</h4>
+                  <p>
+                    General:
+                    <a href="mailto:info@yukteshenterprises.com"
+                      >info@yukteshenterprises.com</a
+                    ><br />
+                    Sales:
+                    <a href="mailto:sales@yukteshenterprises.com"
+                      >sales@yukteshenterprises.com</a
+                    ><br />
+                    Support:
+                    <a href="mailto:support@yukteshenterprises.com"
+                      >support@yukteshenterprises.com</a
+                    >
+                  </p>
+                </div>
+              </div>
+
+              <div class="contact-item">
+                <div class="contact-icon">
+                  <i class="fas fa-clock"></i>
+                </div>
+                <div class="contact-details">
+                  <h4>Business Hours</h4>
+                  <p>
+                    Monday - Saturday: 9:00 AM - 6:00 PM<br />
+                    Sunday: Closed<br />
+                    Emergency: 24/7 Support Available
+                  </p>
+                </div>
+              </div>
+
+              <div class="contact-item">
+                <div class="contact-icon">
+                  <i class="fas fa-user-tie"></i>
+                </div>
+                <div class="contact-details">
+                  <h4>Key Contacts</h4>
+                  <p>
+                    Managing Director: Rajesh Kumar<br />
+                    Sales Manager: Priya Sharma<br />
+                    Technical Head: Amit Patel
+                  </p>
+                </div>
+              </div>
+
+              <div class="contact-item">
+                <div class="contact-icon">
+                  <i class="fas fa-globe"></i>
+                </div>
+                <div class="contact-details">
+                  <h4>Online Presence</h4>
+                  <p>
+                    Website:
+                    <a href="https://yukteshenterprises.com" target="_blank"
+                      >www.yukteshenterprises.com</a
+                    ><br />
+                    WhatsApp:
+                    <a href="https://wa.me/919876543210">+91 98765 43210</a
+                    ><br />
+                    LinkedIn: Yuktesh Enterprises
+                  </p>
                 </div>
               </div>
             </div>
