--- a/html/media.html
+++ b/html/media.html
@@ -1,185 +1,223 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>media</title>
-    <link rel="stylesheet" href="../css/media.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
-</head>
+    <link rel="stylesheet" href="../css/media.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap"
+      rel="stylesheet"
+    />
+  </head>
 
-<body>
+  <body>
     <!-- navbar -->
     <div class="video-container">
-        <video class="bg-video" autoplay muted loop playsinline>
-            <source src="../assets/background.mp4" type="video/mp4" />
-        </video>
+      <video class="bg-video" autoplay muted loop playsinline>
+        <source src="../assets/background.mp4" type="video/mp4" />
+      </video>
     </div>
     <div class="video-overlay"></div>
 
     <header class="header">
-        <nav class="nav-container">
-            <div class="brand-logo">
-                <a href="index.html">
-                    <img src="../assets/Logo.png" alt="Yuktesh Enterprises Logo" class="logo-img" />
-                </a>
-            </div>
+      <nav class="nav-container">
+        <div class="brand-logo">
+          <a href="index.html">
+            <img
+              src="../assets/Logo.png"
+              alt="Yuktesh Enterprises Logo"
+              class="logo-img"
+            />
+          </a>
+        </div>
 
-            <div class="menu-toggle" aria-label="Toggle menu">
-                <div class="menu-bar"></div>
-                <div class="menu-bar"></div>
-                <div class="menu-bar"></div>
-            </div>
+        <div class="menu-toggle" aria-label="Toggle menu">
+          <div class="menu-bar"></div>
+          <div class="menu-bar"></div>
+          <div class="menu-bar"></div>
+        </div>
 
-            <ul class="navigation" id="mobileMenu">
-                <li><a href="../html/master.html" class="nav-link">Home</a></li>
-                <li><a href="../html/aboutUs.html" class="nav-link">About Us</a></li>
-                <li><a href="../html/products.html" class="nav-link ">Products</a></li>
-                <li><a href="#" class="nav-link nav-active">Media</a></li>
-                <li><a href="../html/manufactruingProcess.html" class="nav-link">Manufacturing Process</a></li>
-                <li><a href="../html/orderManagement.html" class="nav-link">Order Management</a></li>
-                <li><a href="../html/employee.html" class="nav-link">Our Team</a></li>
-                <li><a href="../html/contactUs.html" class="nav-link">Contact Us</a></li>
-            </ul>
-        </nav>
+        <ul class="navigation" id="mobileMenu">
+          <li>
+            <a href="../html/master.html" class="nav-link">Home</a>
+          </li>
+          <li><a href="../html/aboutUs.html" class="nav-link">About Us</a></li>
+          <li><a href="../html/products.html" class="nav-link">Products</a></li>
+          <li>
+            <a href="../html/media.html" class="nav-link nav-active">Media</a>
+          </li>
+          <li>
+            <a href="../html/manufactruingProcess.html" class="nav-link"
+              >Manufacturing Process</a
+            >
+          </li>
+          <li>
+            <a href="../html/orderManagement.html" class="nav-link"
+              >Order Management</a
+            >
+          </li>
+          <li><a href="../html/employee.html" class="nav-link">Our Team</a></li>
+          <li>
+            <a href="../html/contactUs.html" class="nav-link">Contact Us</a>
+          </li>
+        </ul>
+      </nav>
     </header>
 
     <!-- media section -->
     <section class="media-section">
-        <div class="container">
-            <!-- Blog / Media Cards -->
-            <div class="tittle ">
-                <h2 class="section-title" id="yuktha-title">Yuktha Bricks</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, facere?</p>
-            </div>
-            <!-- <h2 class="section-title">Yuktha Bricks</h2> -->
-            <div class="card-grid">
-                <div class="card">
-                    <img src="../assets/cement1.jpeg" alt="Cladding Bricks">
-                    <div class="card-content">
-                        <h3>Cladding Bricks : Everything You Need To Know.</h3>
-                        <p>Interior designers and architects are experimenting with new materials to enhance
-                            aesthetics...</p>
-                        <div class="tags">
-                            <!-- <span>Brick Cladding</span>
-                             <span>Brick Guide</span> -->
-                        </div>
-                        <!-- <p class="date">15-Jan-2025</p> -->
-                    </div>
-                </div>
-
-                <div class="card">
-                    <img src="../assets/cement2.jpeg" alt="Exposed Bricks">
-                    <div class="card-content">
-                        <h3>Exposed Bricks vs. Construction Bricks</h3>
-                        <p>Not all bricks are cut from the same cloth. Let’s explore exposed vs construction bricks...
-                        </p>
-                        <!-- <p class="date">15-Jan-2025</p> -->
-                    </div>
-                </div>
-
-                <div class="card">
-                    <img src="../assets/cement3.jpeg" alt="Brick Patterns">
-                    <div class="card-content">
-                        <h3>Bonding with Bricks: Brick Patterns in Construction</h3>
-                        <p>Explore common brick bonds that shape the strength and style of walls...</p>
-                        <!-- <p class="date">15-Jan-2025</p> -->
-                    </div>
-                </div>
-            </div>
-
-            <!-- YouTube Video Section -->
-            <h2 class="section-title">Watch About Our Product</h2>
-            <div class="video-grid">
-                <div class="video-item">
-                    <iframe src="https://www.youtube.com/embed/HN-8-ySrr28?si=xZGEv74NRKsCap6k"
-                        allowfullscreen></iframe>
-                    <p>Lorem ipsum dolor sit amet.</p>
-                </div>
-                <div class="video-item">
-                    <iframe src="https://www.youtube.com/embed/9RfJKNE-oLM?si=2FkLWCxo3nXmhdwm"
-                        allowfullscreen></iframe>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Totam, voluptas.</p>
-                </div>
-            </div>
-
-            <!-- News Section -->
-            <h2 class="section-title"> Yuktha the News</h2>
-            <div class="news-grid">
-                <div class="news-card">
-                    <img src="../assets/cement 4.jpeg" alt="News 1">
-                    <h3>Fly Ash Brick Come under top 10 cementbrick</h3>
-                    <p>Our eco-friendly processes are now recognized industry-wide.</p>
-                </div>
-                <div class="news-card">
-                    <img src="../assets/cement5.jpeg" alt="News 2">
-                    <h3>Top 10 Brick Makers in India</h3>
-                    <p>We made it to the list! Find out what sets us apart.</p>
-                </div>
-            </div>
-
+      <div class="container">
+        <!-- Blog / Media Cards -->
+        <div class="tittle">
+          <h2 class="section-title" id="yuktha-title">Yuktha Bricks</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, facere?
+          </p>
         </div>
+        <!-- <h2 class="section-title">Yuktha Bricks</h2> -->
+        <div class="card-grid">
+          <div class="card">
+            <img src="../assets/cement1.jpeg" alt="Cladding Bricks" />
+            <div class="card-content">
+              <h3>Cladding Bricks : Everything You Need To Know.</h3>
+              <p>
+                Interior designers and architects are experimenting with new
+                materials to enhance aesthetics...
+              </p>
+              <div class="tags">
+                <!-- <span>Brick Cladding</span>
+                             <span>Brick Guide</span> -->
+              </div>
+              <!-- <p class="date">15-Jan-2025</p> -->
+            </div>
+          </div>
+
+          <div class="card">
+            <img src="../assets/cement2.jpeg" alt="Exposed Bricks" />
+            <div class="card-content">
+              <h3>Exposed Bricks vs. Construction Bricks</h3>
+              <p>
+                Not all bricks are cut from the same cloth. Let’s explore
+                exposed vs construction bricks...
+              </p>
+              <!-- <p class="date">15-Jan-2025</p> -->
+            </div>
+          </div>
+
+          <div class="card">
+            <img src="../assets/cement3.jpeg" alt="Brick Patterns" />
+            <div class="card-content">
+              <h3>Bonding with Bricks: Brick Patterns in Construction</h3>
+              <p>
+                Explore common brick bonds that shape the strength and style of
+                walls...
+              </p>
+              <!-- <p class="date">15-Jan-2025</p> -->
+            </div>
+          </div>
+        </div>
+
+        <!-- YouTube Video Section -->
+        <h2 class="section-title">Watch About Our Product</h2>
+        <div class="video-grid">
+          <div class="video-item">
+            <iframe
+              src="https://www.youtube.com/embed/HN-8-ySrr28?si=xZGEv74NRKsCap6k"
+              allowfullscreen
+            ></iframe>
+            <p>Lorem ipsum dolor sit amet.</p>
+          </div>
+          <div class="video-item">
+            <iframe
+              src="https://www.youtube.com/embed/9RfJKNE-oLM?si=2FkLWCxo3nXmhdwm"
+              allowfullscreen
+            ></iframe>
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Totam,
+              voluptas.
+            </p>
+          </div>
+        </div>
+
+        <!-- News Section -->
+        <h2 class="section-title">Yuktha the News</h2>
+        <div class="news-grid">
+          <div class="news-card">
+            <img src="../assets/cement 4.jpeg" alt="News 1" />
+            <h3>Fly Ash Brick Come under top 10 cementbrick</h3>
+            <p>Our eco-friendly processes are now recognized industry-wide.</p>
+          </div>
+          <div class="news-card">
+            <img src="../assets/cement5.jpeg" alt="News 2" />
+            <h3>Top 10 Brick Makers in India</h3>
+            <p>We made it to the list! Find out what sets us apart.</p>
+          </div>
+        </div>
+      </div>
     </section>
 
     <!-- footer -->
     <footer class="footer">
-        <div class="footer-container">
-            <div class="footer-content">
-                <div class="footer-section">
-                    <h3>Quick Links</h3>
-                    <ul>
-                        <li><a href="../html/master.html">Home</a></li>
-                        <li><a href="../html/aboutUs.html">About Us</a></li>
-                        <li><a href="../html/products.html">Products</a></li>
-                        <li><a href="#">Media</a></li>
-                        <li><a href="../html/manufactruingProcess.html">Manufacturing Process</a></li>
-                        <li><a href="../html/orderManagement.html">Order Management</a></li>
-                        <li><a href="../html/employee.html">Our Team</a></li>
-                        <li><a href="../html/contactUs.html">Contact Us</a></li>
-                    </ul>
-                </div>
+      <div class="footer-container">
+        <div class="footer-content">
+          <div class="footer-section">
+            <h3>Quick Links</h3>
+            <ul>
+              <li><a href="../html/master.html">Home</a></li>
+              <li><a href="../html/aboutUs.html">About Us</a></li>
+              <li><a href="../html/products.html">Products</a></li>
+              <li><a href="../html/media.html">Media</a></li>
+              <li>
+                <a href="../html/manufactruingProcess.html"
+                  >Manufacturing Process</a
+                >
+              </li>
+              <li>
+                <a href="../html/orderManagement.html">Order Management</a>
+              </li>
+              <li><a href="../html/employee.html">Our Team</a></li>
+              <li><a href="../html/contactUs.html">Contact Us</a></li>
+            </ul>
+          </div>
 
-                <div class="footer-section">
-                    <h3>Connect With Us</h3>
-                    <p>
-                        Join our community and stay updated with the latest trends and
-                        innovations.
-                    </p>
-                    <div class="social-icons">
-                        <a href="#" class="social-icon facebook">f</a>
-                        <a href="#" class="social-icon twitter">X</a>
-                        <a href="#" class="social-icon instagram">i</a>
-                        <a href="#" class="social-icon linkedin">ln</a>
-                        <a href="#" class="social-icon youtube">Y</a>
-                    </div>
-                </div>
-
-                <div class="footer-section">
-                    <h3>Contact Info</h3>
-                    <p>123 Business Avenue, Mumbai</p>
-                    <p>Maharashtra, India 400001</p>
-                    <p>Phone: +91 22 1234 5678</p>
-                    <p>Email: info@yukteshenterprises.com</p>
-                </div>
+          <div class="footer-section">
+            <h3>Connect With Us</h3>
+            <p>
+              Join our community and stay updated with the latest trends and
+              innovations.
+            </p>
+            <div class="social-icons">
+              <a href="#" class="social-icon facebook">f</a>
+              <a href="#" class="social-icon twitter">X</a>
+              <a href="#" class="social-icon instagram">i</a>
+              <a href="#" class="social-icon linkedin">ln</a>
+              <a href="#" class="social-icon youtube">Y</a>
             </div>
+          </div>
 
-            <div class="footer-bottom">
-                <div class="footer-links">
-                    <a href="#privacy">Privacy Policy</a>
-                    <a href="#terms">Terms of Service</a>
-                    <a href="#cookies">Cookie Policy</a>
-                </div>
-                <p>&copy; 2023 Yuktesh Enterprises. All rights reserved.</p>
-            </div>
+          <div class="footer-section">
+            <h3>Contact Info</h3>
+            <p>123 Business Avenue, Mumbai</p>
+            <p>Maharashtra, India 400001</p>
+            <p>Phone: +91 22 1234 5678</p>
+            <p>Email: info@yukteshenterprises.com</p>
+          </div>
         </div>
+
+        <div class="footer-bottom">
+          <div class="footer-links">
+            <a href="#privacy">Privacy Policy</a>
+            <a href="#terms">Terms of Service</a>
+            <a href="#cookies">Cookie Policy</a>
+          </div>
+          <p>&copy; 2023 Yuktesh Enterprises. All rights reserved.</p>
+        </div>
+      </div>
     </footer>
 
-
     <script src="../js/media.js"></script>
-
-</body>
-
+  </body>
 </html>
