--- a/html/orderManagement.html
+++ b/html/orderManagement.html
@@ -43,22 +43,26 @@
           <div class="menu-bar"></div>
         </div>
         <ul class="navigation" id="mobileMenu">
-          <li><a href="master.html" class="nav-link">Home</a></li>
-          <li><a href="aboutUs.html" class="nav-link">About Us</a></li>
-          <li><a href="../html/products.html" class="nav-link">Products</a></li>
-          <li><a href="media.html" class="nav-link">Media</a></li>
           <li>
-            <a href="manufactruingProcess.html" class="nav-link"
+            <a href="../html/master.html" class="nav-link">Home</a>
+          </li>
+          <li><a href="../html/aboutUs.html" class="nav-link">About Us</a></li>
+          <li><a href="../html/products.html" class="nav-link">Products</a></li>
+          <li><a href="../html/media.html" class="nav-link">Media</a></li>
+          <li>
+            <a href="../html/manufactruingProcess.html" class="nav-link"
               >Manufacturing Process</a
             >
           </li>
           <li>
-            <a href="orderManagement.html" class="nav-link nav-active"
+            <a href="../html/orderManagement.html" class="nav-link nav-active"
               >Order Management</a
             >
           </li>
-          <li><a href="employee.html" class="nav-link">Our Team</a></li>
-          <li><a href="contactUs.html" class="nav-link">Contact Us</a></li>
+          <li><a href="../html/employee.html" class="nav-link">Our Team</a></li>
+          <li>
+            <a href="../html/contactUs.html" class="nav-link">Contact Us</a>
+          </li>
         </ul>
       </nav>
     </header>
@@ -321,16 +325,20 @@
           <div class="footer-section">
             <h3>Quick Links</h3>
             <ul>
-              <li><a href="master.html">Home</a></li>
-              <li><a href="aboutUs.html">About Us</a></li>
+              <li><a href="../html/master.html">Home</a></li>
+              <li><a href="../html/aboutUs.html">About Us</a></li>
               <li><a href="../html/products.html">Products</a></li>
-              <li><a href="media.html">Media</a></li>
+              <li><a href="../html/media.html">Media</a></li>
               <li>
-                <a href="manufactruingProcess.html">Manufacturing Process</a>
+                <a href="../html/manufactruingProcess.html"
+                  >Manufacturing Process</a
+                >
               </li>
-              <li><a href="orderManagement.html">Order Management</a></li>
-              <li><a href="employee.html">Our Team</a></li>
-              <li><a href="contactUs.html">Contact Us</a></li>
+              <li>
+                <a href="../html/orderManagement.html">Order Management</a>
+              </li>
+              <li><a href="../html/employee.html">Our Team</a></li>
+              <li><a href="../html/contactUs.html">Contact Us</a></li>
             </ul>
           </div>
           <div class="footer-section">
