--- a/html/products.html
+++ b/html/products.html
@@ -41,18 +41,30 @@
         </div>
 
         <ul class="navigation" id="mobileMenu">
-          <li><a href="master.html" class="nav-link">Home</a></li>
-          <li><a href="aboutUs.html" class="nav-link">About Us</a></li>
-          <li><a href="#" class="nav-link nav-active">Products</a></li>
+          <li>
+            <a href="../html/master.html" class="nav-link">Home</a>
+          </li>
+          <li><a href="../html/aboutUs.html" class="nav-link">About Us</a></li>
+          <li>
+            <a href="../html/products.html" class="nav-link nav-active"
+              >Products</a
+            >
+          </li>
           <li><a href="../html/media.html" class="nav-link">Media</a></li>
           <li>
-            <a href="manufactruingProcess.html" class="nav-link"
+            <a href="../html/manufactruingProcess.html" class="nav-link"
               >Manufacturing Process</a
             >
           </li>
-          <li><a href="../html/orderManagement.html" class="nav-link">Order Management</a></li>
-          <li><a href="employee.html" class="nav-link">Our Team</a></li>
-          <li><a href="contactUs.html" class="nav-link">Contact Us</a></li>
+          <li>
+            <a href="../html/orderManagement.html" class="nav-link"
+              >Order Management</a
+            >
+          </li>
+          <li><a href="../html/employee.html" class="nav-link">Our Team</a></li>
+          <li>
+            <a href="../html/contactUs.html" class="nav-link">Contact Us</a>
+          </li>
         </ul>
       </nav>
     </header>
@@ -60,7 +72,10 @@
     <section class="products">
       <div class="section-title">
         <h1>Our Premium Products</h1>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusamus, incidunt perspiciatis. Recusandae iste beatae eius.</p>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusamus,
+          incidunt perspiciatis. Recusandae iste beatae eius.
+        </p>
       </div>
 
       <div class="product-grid">
@@ -196,12 +211,16 @@
             <ul>
               <li><a href="../html/master.html">Home</a></li>
               <li><a href="../html/aboutUs.html">About Us</a></li>
-              <li><a href="#services">Products</a></li>
+              <li><a href="../html/products.html">Products</a></li>
               <li><a href="../html/media.html">Media</a></li>
               <li>
-                <a href="manufactruingProcess.html">Manufacturing Process</a>
+                <a href="../html/manufactruingProcess.html"
+                  >Manufacturing Process</a
+                >
               </li>
-              <li><a href="../html/orderManagement.html">Order Management</a></li>
+              <li>
+                <a href="../html/orderManagement.html">Order Management</a>
+              </li>
               <li><a href="../html/employee.html">Our Team</a></li>
               <li><a href="../html/contactUs.html">Contact Us</a></li>
             </ul>
