--- a/html/employee.html
+++ b/html/employee.html
@@ -43,28 +43,32 @@
 
           <ul class="navigation" id="mobileMenu">
             <li>
-              <a href="master.html" class="nav-link">Home</a>
-            </li>
-            <li><a href="aboutUs.html" class="nav-link">About Us</a></li>
-            <li>
-              <a href="products.html" class="nav-link">Products</a>
+              <a href="../html/master.html" class="nav-link">Home</a>
             </li>
             <li>
-              <a href="../html/media.html" class="nav-link">Media</a>
+              <a href="../html/aboutUs.html" class="nav-link">About Us</a>
             </li>
             <li>
-              <a href="manufactruingProcess.html" class="nav-link"
+              <a href="../html/products.html" class="nav-link">Products</a>
+            </li>
+            <li><a href="../html/media.html" class="nav-link">Media</a></li>
+            <li>
+              <a href="../html/manufactruingProcess.html" class="nav-link"
                 >Manufacturing Process</a
               >
             </li>
             <li>
-              <a href="../html/orderManagement.html" class="nav-link">Order Management</a>
+              <a href="../html/orderManagement.html" class="nav-link"
+                >Order Management</a
+              >
             </li>
             <li>
-              <a href="employee.html" class="nav-link nav-active">Our Team</a>
+              <a href="../html/employee.html" class="nav-link nav-active"
+                >Our Team</a
+              >
             </li>
             <li>
-              <a href="contactUs.html" class="nav-link">Contact Us</a>
+              <a href="../html/contactUs.html" class="nav-link">Contact Us</a>
             </li>
           </ul>
         </nav>
@@ -122,16 +126,20 @@
           <div class="footer-section">
             <h3>Quick Links</h3>
             <ul>
-              <li><a href="master.html">Home</a></li>
-              <li><a href="aboutUs.html">About Us</a></li>
-              <li><a href="products.html">Products</a></li>
+              <li><a href="../html/master.html">Home</a></li>
+              <li><a href="../html/aboutUs.html">About Us</a></li>
+              <li><a href="../html/products.html">Products</a></li>
               <li><a href="../html/media.html">Media</a></li>
               <li>
-                <a href="manufactruingProcess.html">Manufacturing Process</a>
+                <a href="../html/manufactruingProcess.html"
+                  >Manufacturing Process</a
+                >
               </li>
-              <li><a href="../html/orderManagement.html">Order Management</a></li>
-              <li><a href="employee.html">Our Team</a></li>
-              <li><a href="contactUs.html">Contact Us</a></li>
+              <li>
+                <a href="../html/orderManagement.html">Order Management</a>
+              </li>
+              <li><a href="../html/employee.html">Our Team</a></li>
+              <li><a href="../html/contactUs.html">Contact Us</a></li>
             </ul>
           </div>
 
