--- a/html/master.html
+++ b/html/master.html
@@ -51,12 +51,14 @@
 
         <!-- MobileMenu -->
         <ul class="navigation" id="mobileMenu">
-          <li><a href="master.html" class="nav-link nav-active">Home</a></li>
-          <li><a href="aboutUs.html" class="nav-link">About Us</a></li>
+          <li>
+            <a href="../html/master.html" class="nav-link nav-active">Home</a>
+          </li>
+          <li><a href="../html/aboutUs.html" class="nav-link">About Us</a></li>
           <li><a href="../html/products.html" class="nav-link">Products</a></li>
           <li><a href="../html/media.html" class="nav-link">Media</a></li>
           <li>
-            <a href="manufactruingProcess.html" class="nav-link"
+            <a href="../html/manufactruingProcess.html" class="nav-link"
               >Manufacturing Process</a
             >
           </li>
@@ -65,8 +67,10 @@
               >Order Management</a
             >
           </li>
-          <li><a href="employee.html" class="nav-link">Our Team</a></li>
-          <li><a href="contactUs.html" class="nav-link">Contact Us</a></li>
+          <li><a href="../html/employee.html" class="nav-link">Our Team</a></li>
+          <li>
+            <a href="../html/contactUs.html" class="nav-link">Contact Us</a>
+          </li>
         </ul>
       </nav>
     </header>
@@ -107,7 +111,7 @@
           <p>High-Density Block</p>
         </div>
         <div class="product-item">
-          <img src="../assets/brick3.avif" alt="Eco-Friendly Brick" />
+          <img src="../assets/brick3.jpg" alt="Eco-Friendly Brick" />
           <p>Eco-Friendly Brick</p>
         </div>
       </div>
@@ -379,18 +383,20 @@
           <div class="footer-section">
             <h3>Quick Links</h3>
             <ul>
-              <li><a href="master.html">Home</a></li>
-              <li><a href="aboutUs.html">About Us</a></li>
+              <li><a href="../html/master.html">Home</a></li>
+              <li><a href="../html/aboutUs.html">About Us</a></li>
               <li><a href="../html/products.html">Products</a></li>
               <li><a href="../html/media.html">Media</a></li>
               <li>
-                <a href="manufactruingProcess.html">Manufacturing Process</a>
+                <a href="../html/manufactruingProcess.html"
+                  >Manufacturing Process</a
+                >
               </li>
               <li>
                 <a href="../html/orderManagement.html">Order Management</a>
               </li>
-              <li><a href="employee.html">Our Team</a></li>
-              <li><a href="contactUs.html">Contact Us</a></li>
+              <li><a href="../html/employee.html">Our Team</a></li>
+              <li><a href="../html/contactUs.html">Contact Us</a></li>
             </ul>
           </div>
 
